my-apps/utility/wger/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wger
  namespace: wger
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "fitness.mcmn.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: wger-http
          port: 8000
          weight: 1
--- # External DNS for CF tunnel exposure. external-dns does not support annotating gateway API + HTTPRoute
apiVersion: externaldns.k8s.io/v1alpha1
kind: DNSEndpoint
metadata:
  name: wger-tunnel
  namespace: wger
  labels:
    external-dns: "true"
spec:
  endpoints:
    - dnsName: fitness.mcmn.me
      recordType: CNAME
      targets:
        - 37ab5ca6-9491-4bc3-9505-75be85d6e554.cfargotunnel.com
